Fix alignment errors with the search and category fields in the e-commerce plugin.

--- a/less/plugins/ecommerce/ecommerce-categories.less
+++ b/less/plugins/ecommerce/ecommerce-categories.less
@@ -21,6 +21,18 @@
 
 .category-list {
     margin: 0;
+
+    @media @tablet-horizontal {
+        margin: 0 -0.5%;
+    }
+
+    @media @tablet {
+        margin: 0 -1%;
+    }
+	
+   @media @mobile {
+        margin: 0;
+    }
 }
 
 // ------------------------------
@@ -32,25 +44,13 @@
     list-style: none;
 
     @media @tablet-horizontal {
-        width: 32.5%;
-        margin: 0 1.25% 1.25% 0;
-        &:nth-child(3n) {
-            margin-right: 0;
-        }
-        &:nth-child(4n) {
-            clear: left;
-        }
+        width: 32.3%;
+		margin: 0 0.5% 1%;
     }
 
     @media @tablet {
-        width: 49%;
-        margin: 0 2% 2% 0;
-        &:nth-child(2n) {
-            margin-right: 0;
-        }
-        &:nth-child(3n) {
-            clear: left;
-        }
+        width: 48%;
+        margin: 0 1% 2%;
     }
 	
    @media @mobile {
